# xamina

./: .gitignore  .tmp_ai_stream_payload.json  MVP_PROGRESS_HANDOVER.md  XAMINA_MVP_PRODUCTION_PLAN.md  XAMINA_POLISH_BLUEPRINT.md  docker-compose.yml  dokumentation.md  xamina-dashboard.jsx  xamina-design-system.html
.github/workflows/: ci.yml  deploy.yml
docs/legal/: BILLING_PAYMENT_TERMS_TEMPLATE.md  PRIVACY_POLICY_TEMPLATE.md  SPRINT13_LEGAL_SIGNOFF_CHECKLIST.md  TERMS_OF_SERVICE_TEMPLATE.md
docs/ops/: ai-monitoring.md  monitoring-mvp.md  sprint10-certificate-loadtest.md  sprint10-smtp-push-runbook.md  sprint12-import-polish-runbook.md  sprint13-billing-sandbox-runbook.md  sprint14-superadmin-prodinfra-runbook.md
docs/postman/: xamina-mvp.postman_collection.json
docs/progress/: SPRINT_1_6_FACT_AUDIT.md
docs/security/: RLS_AUDIT.md  SPRINT15_XSS_AUDIT.md
xamina-backend/: .env.example  Cargo.toml  Dockerfile  README.md
xamina-backend/crates/api/: Cargo.toml
xamina-backend/crates/api/src/: ai_metrics.rs  app.rs  billing_gateway.rs  billing_worker.rs  config.rs  delivery_worker.rs  lib.rs  main.rs  platform_audit.rs  privacy_ops.rs  services.rs  ws_bus.rs  ws_state.rs
xamina-backend/crates/api/src/middleware/: ai_rate_limit.rs  auth.rs  metrics.rs  mod.rs  rate_limit.rs  tenant_context.rs
xamina-backend/crates/api/src/routes/: ai.rs  auth.rs  auth_security.rs  billing.rs  certificate.rs  dashboard.rs  exam.rs  mod.rs  notification.rs  platform.rs  privacy.rs  question.rs  registration.rs  report.rs  student_class.rs  student_profile.rs  subject.rs  submission.rs  superadmin.rs  teacher_assignment.rs  tenant.rs  user.rs  user_generate.rs  websocket.rs
xamina-backend/crates/api/tests/: ai_integration.rs  auth_integration.rs  auth_security_integration.rs  billing_integration.rs  dashboard_report_notification_integration.rs  exam_publish_integration.rs  exam_session_integration.rs  platform_superadmin_integration.rs  privacy_auth_integration.rs  question_exam_crud_integration.rs  question_import_rate_limit_integration.rs  sprint10_certificate_notification_integration.rs  tenant_isolation_integration.rs  user_class_csv_integration.rs
xamina-backend/crates/api/tests/common/: mod.rs
xamina-backend/crates/core/: Cargo.toml
xamina-backend/crates/core/scratch/: check_db.rs
xamina-backend/crates/core/src/: error.rs  lib.rs
xamina-backend/crates/core/src/domain/: mod.rs
xamina-backend/crates/core/src/domain/ai/: dto.rs  handler.rs  mod.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/analytics/: dto.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/billing/: dto.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/certificate/: dto.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/exam/: dto.rs  handler.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/notification/: dto.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/student_class/: dto.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/student_profile/: dto.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/subject/: dto.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/submission/: dto.rs  mod.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/teacher_assignment/: dto.rs  repository.rs  service.rs
xamina-backend/crates/core/src/domain/tenant/: repository.rs
xamina-backend/crates/core/src/domain/user/: dto.rs  models.rs  repository.rs  service.rs
xamina-backend/crates/db/migrations/: 0001_init.sql  0002_core_auth.sql  0002_exams.sql  0003_questions.sql  0004_exams.sql  0005_submissions.sql  0006_publish_conflict_indexes.sql  0007_notifications.sql  0008_dashboard_indexes.sql  0009_sprint7_multitenant_rls.sql  0010_ai_usage_logs.sql  0011_sprint10_certificates_delivery.sql  0012_sprint10_push_receipts.sql  0013_sprint11_analytics_indexes.sql  0014_sprint13_billing.sql  0015_sprint14_platform_ops.sql  0016_sprint15_privacy_requests.sql  0017_sprint15_auth_security.sql  0018_question_bank_refactor.sql  0019_production_erd_upgrade.sql  0020_add_tenant_id_to_student_profiles.sql  20260225105400_schema_app_and_superadmin_seed.sql
xamina-backend/scripts/: run_integration_tests.ps1  run_mvp_smoke.ps1  run_real_web_push_check.ps1  run_sprint4_regression.ps1  run_sprint6_regression.ps1  run_student_session_smoke.ps1  run_upload_s3_smoke.ps1
xamina-frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test_api.cjs  vite.config.ts
(+200 files in other folders)
