[package]
name = "api"
version = "0.1.0"
edition = "2021"

[features]
default = []
real_web_push = ["dep:web-push", "dep:openssl"]

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }
xamina_core = { package = "core", path = "../core" }
axum-prometheus = "0.7"
aws-sdk-s3 = "1"
aws-credential-types = "1"
lettre = { workspace = true }
web-push = { workspace = true, optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rust_xlsxwriter = "0.79"
calamine = "0.26"
quick-xml = "0.37"
zip = "2.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
pdf-extract = { workspace = true }
